<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormBookActivity">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="406dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        tools:layout_editor_absoluteX="5dp"
        android:layout_marginStart="20dp"
        >

        <TextView
            android:layout_marginStart="20dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formTitle"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/idTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputTitle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="412dp"
        android:layout_height="66dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.14"
        tools:layout_editor_absoluteX="-1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/formPage"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/idPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputPage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="407dp"
        android:layout_height="69dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.141"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/formEditorial"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/idEditorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputEditorial" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="411dp"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.088"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/formAutor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/idAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputAutor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="408dp"
        android:layout_height="99dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.392"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:id="@+id/textfoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/formphoto_url"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/idPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputphoto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="408dp"
        android:layout_height="99dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.696"
        tools:layout_editor_absoluteX="5dp">

        <TextView
            android:id="@+id/textdescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/formDescripcion"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/idDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputDescripcion" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="69dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:layout_editor_absoluteX="5dp">

        <Button
            android:id="@+id/btn_createbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#49599a"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btn_confirmar_libro" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>