<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="247dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/photoUrl"
            android:layout_width="119dp"
            android:layout_height="117dp"

            />

        <LinearLayout
            android:layout_width="216dp"
            android:layout_height="109dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="145dp"
            android:layout_marginEnd="26dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/author"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/editorial"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/pages"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="135dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description"
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>